Changes in spacing style

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,8 @@
 body {
 	/*Modified from https://www.freepik.com/free-vector/variety-colors-hand-painted-background_843572.htm#query=background%20sketch%20color&position=5&from_view=search&track=ais*/
 	background-image: url("../public/background.jpg");
-	background-size: 110%;
+	width: 100%;
+	height: 100%;
 	background-repeat: no-repeat;
 }
 
