--- a/app/globals.css
+++ b/app/globals.css
@@ -3,12 +3,23 @@
 @tailwind components;
 @tailwind utilities;
 
+body, body * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-	/*Modified from https://www.freepik.com/free-vector/variety-colors-hand-painted-background_843572.htm#query=background%20sketch%20color&position=5&from_view=search&track=ais*/
-	background-image: url("../public/background.jpg");
-	width: 100%;
-	height: 100%;
-	background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background-image: url("../public/background.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    overflow: hidden;
+	padding:20px;
+	padding-bottom: 10px;
 }
 
 /*Border for development purposes: border-solid border-2 border-indigo-600*/
