--- a/app/globals.css
+++ b/app/globals.css
@@ -22,4 +22,18 @@ body {
 	padding-bottom: 10px;
 }
 
+.loader {
+    border: 4px solid rgba(255, 255, 255, 0.3);
+    border-radius: 50%;
+    border-top: 4px solid #fff;
+    width: 30px;
+    height: 30px;
+    animation: spin 0.8s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
 /*Border for development purposes: border-solid border-2 border-indigo-600*/
