--- a/app/globals.css
+++ b/app/globals.css
@@ -3,37 +3,48 @@
 @tailwind components;
 @tailwind utilities;
 
-body, body * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body,
+body * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    background-image: url("../public/background.jpg");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    overflow: hidden;
-	padding:20px;
-	padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+
+  background-image: url("../public/background.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  overflow: hidden;
+  padding: 20px;
+  padding-bottom: 10px;
 }
 
 .loader {
-    border: 4px solid rgba(255, 255, 255, 0.3);
-    border-radius: 50%;
-    border-top: 4px solid #fff;
-    width: 30px;
-    height: 30px;
-    animation: spin 0.8s linear infinite;
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+  border: 4px solid rgba(255, 255, 255, 0.3);
+  border-radius: 50%;
+  border-top: 4px solid #fff;
+  width: 30px;
+  height: 30px;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
 
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.global-canvas{
+  max-width: 900px;
+  min-width:300px;
+  max-height:900px;
+}
 /*Border for development purposes: border-solid border-2 border-indigo-600*/
