--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
-
+  width: 100vw;
   background-image: url("../public/background.jpg");
   background-repeat: no-repeat;
   background-position: center center;
@@ -23,6 +23,64 @@ body {
   padding: 20px;
   padding-bottom: 10px;
 }
+
+.wrapper {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* centra verticalment */
+  justify-content: center;
+  /* centra horitzontalment */
+
+}
+
+header {
+  font-size: 2.25rem;
+  /* Aproximació de text-4xl */
+  margin: 1.25rem;
+  /* Aproximació de m-5 */
+  text-align: center;
+}
+@media (min-width: 768px) {
+
+  /* Aproximació del breakpoint "md" de Tailwind */
+  header {
+    font-size: 4rem;
+    /* Aproximació de md:text-6xl */
+  }
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+  width: 100%;
+  max-height: calc(100vh - 40px - 1.25rem);
+  overflow: hidden;
+}
+
+
+
+footer {
+  text-align: center;
+  font-size: 0.875rem;
+  margin-top: 1.25rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
+
+/* ////////////////////////////////////////////OTHER/////////////////////////////////////////////////////// */
+
+/* ///////LOADER//////// */
+
 
 .loader {
   border: 4px solid rgba(255, 255, 255, 0.3);
@@ -37,14 +95,23 @@ body {
   0% {
     transform: rotate(0deg);
   }
-
+  
   100% {
     transform: rotate(360deg);
   }
 }
-.global-canvas{
-  max-width: 900px;
-  min-width:300px;
-  max-height:900px;
+
+/* ///////CANVAS//////// */
+
+
+
+.div-canvas {
+  display: flex; /* per centrar el canvas dins del div */
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
 }
+
+
+
 /*Border for development purposes: border-solid border-2 border-indigo-600*/
