--- a/app/globals.css
+++ b/app/globals.css
@@ -5,128 +5,138 @@
 
 body,
 body * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  width: 100vw;
-  background-image: url("../public/background.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  overflow: hidden;
-  padding: 20px;
-  padding-bottom: 10px;
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+	width: 100vw;
+	background-image: url("../public/background.jpg");
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	overflow: hidden;
+	padding: 20px;
+	padding-bottom: 10px;
 }
 
 .wrapper {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* centra verticalment */
-  justify-content: center;
-  /* centra horitzontalment */
-
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	/* centra verticalment */
+	justify-content: center;
+	/* centra horitzontalment */
 }
 
 header {
-  font-size: 2.25rem;
-  /* Aproximació de text-4xl */
-  margin: 1.25rem;
-  /* Aproximació de m-5 */
-  text-align: center;
+	font-size: 2.25rem;
+	/* Aproximació de text-4xl */
+	margin: 1.25rem;
+	/* Aproximació de m-5 */
+	text-align: center;
 }
 @media (min-width: 768px) {
-
-  /* Aproximació del breakpoint "md" de Tailwind */
-  header {
-    font-size: 4rem;
-    /* Aproximació de md:text-6xl */
-  }
+	/* Aproximació del breakpoint "md" de Tailwind */
+	header {
+		font-size: 4rem;
+		/* Aproximació de md:text-6xl */
+	}
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  flex-grow: 1;
-  width: 100%;
-  max-height: calc(100vh - 40px - 1.25rem);
-  overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	flex-grow: 1;
+	width: 100%;
+	max-height: calc(100vh - 40px - 1.25rem);
+	overflow: hidden;
 }
-
-
 
 footer {
-  text-align: center;
-  font-size: 0.875rem;
-  margin-top: 1.25rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+	text-align: center;
+	font-size: 0.875rem;
+	margin-top: 1.25rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
-
-
-
 
 /* ////////////////////////////////////////////OTHER/////////////////////////////////////////////////////// */
 
 /* ///////LOADER//////// */
 
-
 .loader {
-  border: 4px solid rgba(255, 255, 255, 0.3);
-  border-radius: 50%;
-  border-top: 4px solid #fff;
-  width: 30px;
-  height: 30px;
-  animation: spin 0.8s linear infinite;
+	border: 4px solid rgba(255, 255, 255, 0.3);
+	border-radius: 50%;
+	border-top: 4px solid #fff;
+	width: 30px;
+	height: 30px;
+	animation: spin 0.8s linear infinite;
 }
 
 @keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  
-  100% {
-    transform: rotate(360deg);
-  }
+	0% {
+		transform: rotate(0deg);
+	}
+
+	100% {
+		transform: rotate(360deg);
+	}
 }
 
 /* ///////CANVAS//////// */
 
-
-
 .div-canvas {
-  display: flex; /* per centrar el canvas dins del div */
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
+	display: flex; /* per centrar el canvas dins del div */
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 20px;
 }
 
 .hidden-button {
-  display: none;
+	display: none;
 }
 .button-spinner {
-  display: inline-block;
-  border: 4px solid rgba(255, 255, 255, 0.3);
-  border-radius: 50%;
-  border-top: 4px solid white;
-  width: 24px;
-  height: 24px;
-  animation: spin2 1s linear infinite;       /* Animació per fer girar el Spinner */
+	display: inline-block;
+	border: 4px solid rgba(255, 255, 255, 0.3);
+	border-radius: 50%;
+	border-top: 4px solid white;
+	width: 24px;
+	height: 24px;
+	animation: spin2 1s linear infinite; /* Animació per fer girar el Spinner */
 }
 
 @keyframes spin2 {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
 /*Border for development purposes: border-solid border-2 border-indigo-600*/
+
+/* /////Background music/////*/
+
+.music-control {
+	position: fixed;
+	top: 10px; /* Adjust the top position as needed */
+	right: 10px; /* Adjust the right position as needed */
+}
+
+.mute-button {
+	background: none;
+	border: none;
+	cursor: pointer;
+	font-size: 24px;
+	color: #333; /* Change the color as needed */
+}
