--- a/app/globals.css
+++ b/app/globals.css
@@ -31,6 +31,7 @@ body {
   align-items: center;
   /* centra verticalment */
   justify-content: center;
+  max-height: 100%;
   /* centra horitzontalment */
 
 }
