--- a/app/globals.css
+++ b/app/globals.css
@@ -13,15 +13,17 @@ body * {
 body {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height:100vh;
+  
   width: 100vw;
   background-image: url("../public/background.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  overflow: hidden;
+  /* overflow: hidden; */
   padding: 20px;
-  padding-bottom: 10px;
+  padding-top: 0px;
+  padding-bottom: 5px;
 }
 
 .wrapper {
@@ -37,9 +39,9 @@ body {
 }
 
 header {
-  font-size: 2.25rem;
+  font-size: 1.5rem;
+  margin:0.5rem;
   /* Aproximació de text-4xl */
-  margin: 1.25rem;
   /* Aproximació de m-5 */
   text-align: center;
 }
@@ -48,6 +50,7 @@ header {
   /* Aproximació del breakpoint "md" de Tailwind */
   header {
     font-size: 4rem;
+    margin: 1.25rem;
     /* Aproximació de md:text-6xl */
   }
 }
@@ -56,23 +59,58 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   flex-grow: 1;
   width: 100%;
-  max-height: calc(100vh - 40px - 1.25rem);
-  overflow: hidden;
+  overflow-y: auto;
+  -webkit-mask: linear-gradient(180deg, transparent 0%, rgba(0, 0, 0, 1) 2%, rgba(0, 0, 0, 1) 98%, transparent 100%);
+  mask: linear-gradient(180deg, transparent 0%, rgba(0, 0, 0, 1) 2%, rgba(0, 0, 0, 1) 98%, transparent 100%);
 }
 
+main::before,
+main::after {
+  content: "";
+  /* flex-grow: 1; */
+}
 
-
-footer {
-  text-align: center;
-  font-size: 0.875rem;
-  margin-top: 1.25rem;
+.content-wrapper {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 100%;
+  flex-grow: 2;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+}
+
+footer {
+  text-align: center;
+  font-size: 0.8em;
+  display: flex;
+  gap:10px;
+  flex-direction:row;
+  align-items: center;
+  justify-content: center;
+}
+.git{
+  width:20px;
+  height:20px;
+}
+@media (min-width: 768px) {
+
+  /* Aproximació del breakpoint "md" de Tailwind */
+  footer {
+    flex-direction: column;
+    font-size: 0.8rem;
+    margin-top: 1.25rem;
+    gap:initial;
+    /* Aproximació de md:text-6xl */
+  }
+  .git{
+    width:28px;
+    height:28px;
+  }
 }
 
 
