--- a/app/globals.css
+++ b/app/globals.css
@@ -62,6 +62,8 @@ main {
   flex-grow: 1;
   width: 100%;
   overflow-y: auto;
+  overflow-x: hidden;
+  
   -webkit-mask: linear-gradient(180deg, transparent 0%, rgba(0, 0, 0, 1) 2%, rgba(0, 0, 0, 1) 98%, transparent 100%);
   mask: linear-gradient(180deg, transparent 0%, rgba(0, 0, 0, 1) 2%, rgba(0, 0, 0, 1) 98%, transparent 100%);
 }
