--- a/app/globals.css
+++ b/app/globals.css
@@ -21,7 +21,7 @@ body {
   background-position: center center;
   background-size: cover;
   /* overflow: hidden; */
-  padding: 20px;
+  /* padding: 20px; */
   padding-top: 0px;
   padding-bottom: 5px;
 }
@@ -63,7 +63,8 @@ main {
   width: 100%;
   overflow-y: auto;
   overflow-x: hidden;
-  
+  padding-left: 20px;
+  padding-right: 20px;
   -webkit-mask: linear-gradient(180deg, transparent 0%, rgba(0, 0, 0, 1) 2%, rgba(0, 0, 0, 1) 98%, transparent 100%);
   mask: linear-gradient(180deg, transparent 0%, rgba(0, 0, 0, 1) 2%, rgba(0, 0, 0, 1) 98%, transparent 100%);
 }
