--- a/app/globals.css
+++ b/app/globals.css
@@ -5,170 +5,192 @@
 
 body,
 body * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  height:100vh;
-  
-  width: 100vw;
-  background-image: url("../public/background.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  /* overflow: hidden; */
-  /* padding: 20px; */
-  padding-top: 0px;
-  padding-bottom: 5px;
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+
+	width: 100vw;
+	background-image: url("../public/background.jpg");
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	/* overflow: hidden; */
+	/* padding: 20px; */
+	padding-top: 0px;
+	padding-bottom: 5px;
 }
 
 .wrapper {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* centra verticalment */
-  justify-content: center;
-  max-height: 100%;
-  /* centra horitzontalment */
-
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	/* centra verticalment */
+	justify-content: center;
+	max-height: 100%;
+	/* centra horitzontalment */
 }
 
 header {
-  font-size: 1.8rem;
-  margin:0rem;
-  /* Aproximació de text-4xl */
-  /* Aproximació de m-5 */
-  text-align: center;
+	font-size: 1.8rem;
+	margin: 0rem;
+	/* Aproximació de text-4xl */
+	/* Aproximació de m-5 */
+	text-align: center;
 }
 @media (min-width: 768px) {
-
-  /* Aproximació del breakpoint "md" de Tailwind */
-  header {
-    font-size: 4rem;
-    margin: 1.25rem;
-    /* Aproximació de md:text-6xl */
-  }
+	/* Aproximació del breakpoint "md" de Tailwind */
+	header {
+		font-size: 4rem;
+		margin: 1.25rem;
+		/* Aproximació de md:text-6xl */
+	}
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-grow: 1;
-  width: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
-  padding-left: 20px;
-  padding-right: 20px;
-  -webkit-mask: linear-gradient(180deg, transparent 0%, rgba(0, 0, 0, 1) 2%, rgba(0, 0, 0, 1) 98%, transparent 100%);
-  mask: linear-gradient(180deg, transparent 0%, rgba(0, 0, 0, 1) 2%, rgba(0, 0, 0, 1) 98%, transparent 100%);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	flex-grow: 1;
+	width: 100%;
+	overflow-y: auto;
+	overflow-x: hidden;
+	padding-left: 20px;
+	padding-right: 20px;
+	-webkit-mask: linear-gradient(
+		180deg,
+		transparent 0%,
+		rgba(0, 0, 0, 1) 2%,
+		rgba(0, 0, 0, 1) 98%,
+		transparent 100%
+	);
+	mask: linear-gradient(
+		180deg,
+		transparent 0%,
+		rgba(0, 0, 0, 1) 2%,
+		rgba(0, 0, 0, 1) 98%,
+		transparent 100%
+	);
 }
 
 main::before,
 main::after {
-  content: "";
-  /* flex-grow: 1; */
+	content: "";
+	/* flex-grow: 1; */
 }
 
 .content-wrapper {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  width: 100%;
-  flex-grow: 2;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
+	padding-top: 10px;
+	padding-bottom: 10px;
+	width: 100%;
+	flex-grow: 2;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
 footer {
-  text-align: center;
-  font-size: 0.8em;
-  display: flex;
-  gap:10px;
-  flex-direction:row;
-  align-items: center;
-  justify-content: center;
+	text-align: center;
+	font-size: 0.8em;
+	display: flex;
+	gap: 10px;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
 }
-.git{
-  width:20px;
-  height:20px;
+.git {
+	width: 20px;
+	height: 20px;
 }
 @media (min-width: 768px) {
-
-  /* Aproximació del breakpoint "md" de Tailwind */
-  footer {
-    flex-direction: column;
-    font-size: 0.8rem;
-    margin-top: 1.25rem;
-    gap:initial;
-    /* Aproximació de md:text-6xl */
-  }
-  .git{
-    width:28px;
-    height:28px;
-  }
+	/* Aproximació del breakpoint "md" de Tailwind */
+	footer {
+		flex-direction: column;
+		font-size: 0.8rem;
+		margin-top: 1.25rem;
+		gap: initial;
+		/* Aproximació de md:text-6xl */
+	}
+	.git {
+		width: 28px;
+		height: 28px;
+	}
 }
-
-
-
 
 /* ////////////////////////////////////////////OTHER/////////////////////////////////////////////////////// */
 
 /* ///////LOADER//////// */
 
-
 .loader {
-  border: 4px solid rgba(255, 255, 255, 0.3);
-  border-radius: 50%;
-  border-top: 4px solid #fff;
-  width: 30px;
-  height: 30px;
-  animation: spin 0.8s linear infinite;
+	border: 4px solid rgba(255, 255, 255, 0.3);
+	border-radius: 50%;
+	border-top: 4px solid #fff;
+	width: 30px;
+	height: 30px;
+	animation: spin 0.8s linear infinite;
 }
 
 @keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  
-  100% {
-    transform: rotate(360deg);
-  }
+	0% {
+		transform: rotate(0deg);
+	}
+
+	100% {
+		transform: rotate(360deg);
+	}
 }
 
 /* ///////CANVAS//////// */
 
-
-
 .div-canvas {
-  display: flex; /* per centrar el canvas dins del div */
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
+	display: flex; /* per centrar el canvas dins del div */
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 20px;
 }
 
 .hidden-button {
-  display: none;
+	display: none;
 }
 .button-spinner {
-  display: inline-block;
-  border: 4px solid rgba(255, 255, 255, 0.3);
-  border-radius: 50%;
-  border-top: 4px solid white;
-  width: 24px;
-  height: 24px;
-  animation: spin2 1s linear infinite;       /* Animació per fer girar el Spinner */
+	display: inline-block;
+	border: 4px solid rgba(255, 255, 255, 0.3);
+	border-radius: 50%;
+	border-top: 4px solid white;
+	width: 24px;
+	height: 24px;
+	animation: spin2 1s linear infinite; /* Animació per fer girar el Spinner */
 }
 
 @keyframes spin2 {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
 /*Border for development purposes: border-solid border-2 border-indigo-600*/
+
+/* /////Background music/////*/
+
+.music-control {
+	position: fixed;
+	top: 10px; /* Adjust the top position as needed */
+	right: 10px; /* Adjust the right position as needed */
+}
+
+.mute-button {
+	background: none;
+	border: none;
+	cursor: pointer;
+	font-size: 24px;
+	color: #333; /* Change the color as needed */
+}
